<resources>
    <string name="app_name">生活小助手</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="name">姓名：</string>
    <string name="zipCode">关系分组：</string>
    <string name="birthday">生日：</string>
    <string name="mobile">手机号码：</string>
    <string name="family_phone">家庭电话：</string>
    <string name="address">住址：</string>
    <string name="email">电子邮件：</string>
    <string name="other">其他联系方式：</string>
    <string name="remark">备注：</string>
    <string name="toBeImprove">待完善：</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="search_hint">"Enter the name or phone"</string>
    <string name="modify">编辑</string>
    <string name="delete">删除</string>
    <string name="call">拨号</string>
    <string name="mes">发短信</string>
    <string name="mobileS">手机：</string>
    <string name="zipCodeHint">关系分组</string>
    <string name="setupTime">"建立时间 "</string>
    <string name="deadline">"Deadline  "</string>
    <string name="search">查找</string>
    <string name="add">添加</string>
    <string name="addDate">"Add your Note."</string>
    <string name="theme">主题</string>
    <string name="content">内容</string>
    <string name="setDeadlineDate">设置Deadline日期</string>
    <string name="setDeadlineTime">设置Deadline时间</string>
    <string name="complete">完成</string>
    <string name="finish">确定</string>
    <string name="theme_">主题：</string>
    <string name="content_">内容：</string>
    <string name="searchData">"Search your Note."</string>
    <string name="weather">天气</string>
    <string name="memorandum">备忘录</string>
    <string name="quit">退出</string>
    <string name="company">公司</string>
    <string name="plus">+</string>
    <string name="check">"checking permissions"</string>
    <string name="check_fail">申请权限失败。3秒后将退出应用……</string>
    <string name="IT">IT资讯</string>
    <string name="MainBody">正文</string>
    <string name="noNetwork">没网络！</string>
    <string name="loading">loading</string>
    <string name="News">News</string>
</resources>
