<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_main_bg1">
    <TextView
        android:id="@+id/addData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="#11888e"
        android:text="@string/addDate"/>

    <EditText
        android:id="@+id/editTheme"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addData"
        android:hint="@string/theme"/>
    <EditText
        android:id="@+id/editText"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTheme"
        android:hint="@string/content"/>
    <Button
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/setupDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:textAllCaps="false"
        android:text="@string/setDeadlineDate"/>
    <TextView
        android:id="@+id/finishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/setupDate"
        android:layout_toEndOf="@+id/setupDate"/>
    <Button
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/setupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setupDate"
        android:textAllCaps="false"
        android:text="@string/setDeadlineTime" />
    <TextView
        android:id="@+id/finishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setupDate"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/setupTime"
        android:layout_toEndOf="@+id/setupTime"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/setupTime"
        android:text="@string/complete" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/back"
            style="@style/Base.TextAppearance.AppCompat.Button"/>
        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            style="@style/Base.TextAppearance.AppCompat.Button" />
    </LinearLayout>

</RelativeLayout>
