<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:descendantFocusability="blocksDescendants">
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/todo"/>
    <TextView
        android:id="@+id/setupTime"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="#ffffee"
        android:text="@string/setupTime" />

    <TextView
        android:id="@+id/date"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffee"
        android:layout_toRightOf="@+id/setupTime"
        android:layout_toEndOf="@+id/setupTime"/>

    <TextView
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="#ffffee"
        android:text="@string/theme_"
        android:layout_below="@+id/setupTime"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="#ffffee"
        android:text="@string/content_"
        android:layout_below="@+id/theme"/>

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="#ffffee"
        android:layout_below="@+id/text"/>

    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:textColor="#ffffee"
        android:layout_marginBottom="8dp"
        android:text="@string/deadline"/>

    <TextView
        android:id="@+id/deadTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state"
        android:textColor="#ffffee"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@+id/deadline"
        android:layout_toEndOf="@+id/deadline"/>
</RelativeLayout>
