<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/detail"
    android:background="@drawable/chat_main_bg3"
    android:orientation="vertical">
    <ScrollView android:layout_weight="4"
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/widget205"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <ImageButton
                    android:id="@+id/image_button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/icon1"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name">
                </ImageButton>
                <EditText
                    android:id="@+id/zipCode"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:hint="@string/zipCodeHint"
                    android:gravity="top"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/mobile"
                        android:textSize="20sp"
                        android:layout_weight="1"/>
                    <ImageButton
                        android:id="@+id/btn_call"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/call"
                        android:background="@drawable/dial_logo2"
                        style="@style/Base.TextAppearance.AppCompat.Button"/>
                    <ImageButton
                        android:id="@+id/btn_mes"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/mes"
                        android:background="@drawable/msg_logo2"
                        style="@style/Base.TextAppearance.AppCompat.Button"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/family_phone"
                        android:layout_weight="1"
                        android:textSize="20sp" />
                    <ImageButton
                        android:id="@+id/btn_call_family"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/call"
                        android:background="@drawable/dial_logo2"
                        style="@style/Base.TextAppearance.AppCompat.Button"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/family_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/company"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/company"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/other"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/otherContact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/remark"
                    android:textSize="20sp" />
                <EditText android:id="@+id/remark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/toBeImprove"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/position"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:gravity="top" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:id="@+id/btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modify"
            style="@style/Base.TextAppearance.AppCompat.Button"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            style="@style/Base.TextAppearance.AppCompat.Button"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            style="@style/Base.TextAppearance.AppCompat.Button"/>
        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            style="@style/Base.TextAppearance.AppCompat.Button"/>
    </LinearLayout>
</LinearLayout>
