<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_main_bg3"
    >

    <RelativeLayout
        android:id="@+id/ll_search"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="#4D4d4D"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="textShortMessage"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
        </EditText>
        <Button
            android:id="@+id/exit_search"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/menu_exit"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/list_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search"
        >
        <ListView
            android:id="@+id/lv_userList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/menu1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:drawableTop="@drawable/menu_new_user"
        android:text="@string/add"
        android:textSize="12sp"
        android:textColor="#FFF"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:drawableTop="@drawable/menu_search"
        android:text="@string/search"
        android:textSize="12sp"
        android:textColor="#FFF"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/menu3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/IT"
        android:textSize="12sp"
        android:textColor="#FFF"
        android:drawableTop="@drawable/news"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/menu4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/memorandum"
        android:textSize="12sp"
        android:textColor="#FFF"
        android:drawableTop="@drawable/menu_sum"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/menu5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/quit"
        android:textSize="12sp"
        android:textColor="#FFF"
        android:drawableTop="@drawable/menu_return"
        android:textAlignment="center"/>
    <ImageButton
        android:id="@+id/menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/plus"
        android:gravity="center"
        android:contentDescription="@string/plus"
        android:background="@drawable/menu_button_style"
        />

</RelativeLayout>