<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topBar_height"
        android:background="@color/topBar_bg"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/id_imb_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/IT"
            android:src="@drawable/activity_back_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/MainBody"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_20"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/id_loadFailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_20"
        android:text="@string/noNetwork"
        android:gravity="center"
        android:visibility="gone"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/id_newsInfo_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/id_newsInfo_webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </WebView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>